Made changes for getting user through request